# Agentic-Langgraph-Chatbot

./: .gitignore  .vercelignore  README.md  build.sh  package.json  pyproject.toml  requirements.txt  sample_document.txt  test_import.py  test_vercel.py  vercel.json  vercel_app.py
1-BasicChatbot/: chatbot.ipynb
2-HumanAssistance/: humanintheloop.ipynb
api/: index.py
app/models/: chat_models.py  upload_models.py
app/routes/: upload_routes.py
app/services/: embedding_service.py  file_parser.py  llm_service.py  whatsapp_parser.py
whatsapp-chatbot/: .gitignore  Dockerfile  README.md  deploy.sh  env.example  requirements.txt  sample_chat.txt  test_local.py  vercel.json  vercel_app.py
whatsapp-chatbot/api/: index.py
whatsapp-chatbot/app/: main.py
whatsapp-chatbot/app/models/: upload_models.py
whatsapp-chatbot/app/routes/: __init__.py  chat_routes.py  upload_routes.py
whatsapp-chatbot/app/services/: chroma_service.py  embedding_service.py  llm_service.py  whatsapp_parser.py
